--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "c:\\Program Files\\Java\\javafx-sdk-14.0.1\\lib\\javafx.media.jar",
         "c:\\Program Files\\Java\\javafx-sdk-14.0.1\\lib\\javafx.swing.jar",
         "c:\\Program Files\\Java\\javafx-sdk-14.0.1\\lib\\javafx.web.jar",
-        "c:\\Program Files\\Java\\javafx-sdk-14.0.1\\lib\\javafx-swt.jar"
+        "c:\\Program Files\\Java\\javafx-sdk-14.0.1\\lib\\javafx-swt.jar",
+        "/System/iOSSupport/usr/**/*.jar",
+        "/Library/Frameworks/Python.framework/Versions/3.8/share/py4j/py4j0.10.9.jar"
     ]
 }
