--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 *.pyc
 
+SeqMining-Python/src/solver/__pycache__/z3solver.cpython-38.pyc
+SeqMining-Python/src/__pycache__/__init__.cpython-38.pyc
+*.pyc
